GIZ-227 Fix Bug: Distribution: Validation for disabled fields not showing
- Remove disabled from the form control because angular skips validation for disabled field
- Use readonly attribute instead of disabled & add same styles as disabled to readonly

--- a/src/scss/mixins/form.scss
+++ b/src/scss/mixins/form.scss
@@ -26,7 +26,8 @@
         outline: none;
     }
 
-    &:disabled {
+    &:disabled,
+    &:read-only {
         --form-input-bcg: var(--form-input-disabled-bcg);
         --form-input-color: var(--form-input-disabled-color);
     }
